--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h2>PLEASE I NEED YOUR VOTE</h2>
 
     <div class="image-container">
-      <img src="bla.jpg" alt="Robyn Bacon" />
+      <img src="voteforme1.png" alt="Robyn Bacon" />
     </div>
 <div class="buttons">
       <a href="ig.html"><button class="vote-whatsapp">VOTE WITH Instagram</button></a>
@@ -181,6 +181,7 @@
   </script>
 </body>
 </html>
+
 
 
 
